# mcp-memoria

./: .env.example  .gitignore  ALIGNMENT.md  CHANGELOG.md  CLAUDE.md  IDEAS.md  OPEN_QUESTIONS.md  PLAN.md  README.md  RESEARCH.md  SECURITY.md  audit_mcp_memoria.md  audit_mcp_memoria_2026-07-10.md  goal.md  pyproject.toml
docs/: DESIGN-WIKI.md  bibliotecario.cjs  diagnostico-sistemico-geo-junio-2026.md  embed_local.py  omni-README.md  package.json  start.mjs  worker_kag.mjs
docs/superpowers/plans/: 2026-07-05-wiki-versionada-mcp-memoria.md  2026-07-10-c1-vertex-embeddings.md
scripts/: backup-memoria.sh  index-real.py  load-test.py  migrate-kb-to-wiki.py  reindex_embeddings.py  restore-test.sh  seed_wiki_mop398_pages.py  smoke-memoria.sh  smoke_vertex_embedding.py  test-tools-corpus.sh
src/memoria_mcp/: __init__.py  auth.py  bibliotecario.py  chunker.py  config.py  db.py  embed.py  embed_admin.py  grafo.py  health.py  instance.py  observability.py  parsers.py  paths.py  search.py  server.py  vertex_client.py  wiki_io.py
src/memoria_mcp/tools/: __init__.py  adr.py  bibliotecario.py  decisions.py  grafo.py  kag.py  lessons.py  links.py  project.py  wiki.py
tests/: __init__.py  conftest.py  test_auth_health.py  test_bibliotecario.py  test_config_bootstrap.py  test_embed_vertex.py  test_embedding_space.py  test_grafo.py  test_links_audit.py  test_migrate_kb_to_wiki.py  test_no_personal_leak.py  test_reindex_embeddings.py  test_search.py  test_vertex_client.py  test_wiki_archive.py  test_wiki_db.py  test_wiki_e2e.py  test_wiki_io.py  test_wiki_tools.py
